# gnome-gmail-notifier

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  aclocal.m4  autogen.sh  configure  configure.ac
data/: Makefile.am  Makefile.in  ggn-about.xml.in  ggn-edit.xml.in  ggn-menu.xml.in  ggn-prefs.xml.in  gnome-gmail-notifier.desktop.in  gnome-gmail-notifier.xml
po/: Makefile.in.in  POTFILES.in  POTFILES.skip  es.po  gnome-gmail-notifier.pot
src/: Makefile.am  Makefile.in  config.h.in  ggn-about-dialog-priv.h  ggn-about-dialog.c  ggn-about-dialog.h  ggn-account-list-priv.h  ggn-account-list.c  ggn-account-list.h  ggn-account-priv.h  ggn-account.c  ggn-account.h  ggn-audio-priv.h  ggn-audio.c  ggn-audio.h  ggn-entry-priv.h  ggn-entry.c  ggn-entry.h  ggn-icon-priv.h  ggn-icon.c  ggn-icon.h  ggn-keyring.c  ggn-keyring.h  ggn-manager-priv.h  ggn-manager.c  ggn-manager.h  ggn-marshal.c  ggn-marshal.h  ggn-marshal.list  ggn-prefs-priv.h  ggn-prefs-window-priv.h  ggn-prefs-window.c  ggn-prefs-window.h  ggn-prefs.c  ggn-prefs.h  ggn-xml-priv.h  ggn-xml.c  ggn-xml.h  main.c  main.h
